Fixed warning (#837)